# freepst

./: Cargo.toml  Dockerfile  NOTICE  README.md  flake.nix
.github/: FUNDING.yml
.github/ISSUE_TEMPLATE/: 1-bug.yml  2-feature.yml  3-docs.yml
.github/workflows/: forum.yml  release.yml
crates/freepst/: Cargo.toml
crates/freepst-cli/: Cargo.toml  build.rs
crates/freepst-cli/src/: args.rs  compile.rs  download.rs  fonts.rs  greet.rs  init.rs  main.rs  package.rs  query.rs  server.rs  terminal.rs  timings.rs  update.rs  watch.rs  world.rs
crates/freepst-eval/: Cargo.toml
crates/freepst-eval/src/: access.rs  binding.rs  call.rs  code.rs  flow.rs  import.rs  lib.rs  markup.rs  math.rs  methods.rs  ops.rs  rules.rs  vm.rs
crates/freepst-html/: Cargo.toml
crates/freepst-html/src/: encode.rs  lib.rs
crates/freepst-ide/: Cargo.toml
crates/freepst-ide/src/: analyze.rs  complete.rs  definition.rs  jump.rs  lib.rs  matchers.rs  tests.rs  tooltip.rs  utils.rs
crates/freepst-kit/: Cargo.toml
crates/freepst-kit/src/: download.rs  fonts.rs  lib.rs  package.rs
crates/freepst-layout/: Cargo.toml
crates/freepst-layout/src/: image.rs  lists.rs  pad.rs  repeat.rs  shapes.rs  stack.rs  transforms.rs
crates/freepst-layout/src/flow/: block.rs  collect.rs  compose.rs  distribute.rs  mod.rs
crates/freepst-layout/src/grid/: cells.rs  layouter.rs  lines.rs  mod.rs  repeated.rs  rowspans.rs
crates/freepst-layout/src/inline/: box.rs  collect.rs  deco.rs  finalize.rs  line.rs  linebreak.rs  mod.rs  prepare.rs  shaping.rs
crates/freepst-layout/src/math/: accent.rs  attach.rs  cancel.rs  frac.rs  fragment.rs  lr.rs  mat.rs  mod.rs  root.rs  run.rs  shared.rs  stretch.rs  text.rs  underover.rs
crates/freepst-layout/src/pages/: collect.rs  finalize.rs  mod.rs  run.rs
crates/freepst-library/: Cargo.toml
crates/freepst-library/src/: diag.rs  engine.rs  lib.rs  routines.rs
crates/freepst-library/src/foundations/: args.rs  array.rs  bytes.rs  calc.rs  cast.rs  content.rs  context.rs  decimal.rs  dict.rs  element.rs  func.rs  label.rs  mod.rs  module.rs  ops.rs  plugin.rs  repr.rs  scope.rs  str.rs  styles.rs  symbol.rs  ty.rs  value.rs
crates/freepst-library/src/html/: dom.rs
crates/freepst-library/src/introspection/: counter.rs  introspector.rs  location.rs  locator.rs  metadata.rs  state.rs
crates/freepst-library/src/layout/: abs.rs  align.rs  angle.rs  axes.rs  corners.rs  em.rs  fr.rs  frame.rs  grid.rs  hide.rs  layout.rs  length.rs  measure.rs  page.rs  point.rs  ratio.rs  rel.rs  sides.rs  size.rs  spacing.rs
crates/freepst-library/src/loading/: cbor.rs  csv.rs  json.rs  read.rs  toml.rs  xml.rs  yaml.rs
crates/freepst-library/src/math/: equation.rs  frac.rs  matrix.rs  mod.rs  root.rs
crates/freepst-library/src/model/: bibliography.rs  cite.rs  emph.rs  figure.rs  footnote.rs  heading.rs  link.rs  outline.rs  par.rs  quote.rs  reference.rs  strong.rs  table.rs  terms.rs
crates/freepst-library/src/text/: deco.rs  item.rs  lang.rs  linebreak.rs  mod.rs  raw.rs  shift.rs  smallcaps.rs  smartquote.rs  space.rs
crates/freepst-library/src/text/font/: color.rs
crates/freepst-library/src/visualize/: color.rs  curve.rs  gradient.rs  polygon.rs  stroke.rs  tiling.rs
crates/freepst-library/src/visualize/image/: mod.rs  raster.rs
crates/freepst-macros/: Cargo.toml
crates/freepst-macros/src/: cast.rs  elem.rs  func.rs  lib.rs  symbols.rs  time.rs  util.rs
crates/freepst-pdf/: Cargo.toml
crates/freepst-pdf/src/: catalog.rs  color.rs  color_font.rs  content.rs  extg.rs  font.rs  gradient.rs  image.rs  lib.rs  named_destination.rs  outline.rs  page.rs  pattern.rs  resources.rs
crates/freepst-realize/: Cargo.toml
crates/freepst-realize/src/: lib.rs
crates/freepst-render/: Cargo.toml
crates/freepst-render/src/: image.rs  lib.rs  paint.rs  shape.rs  text.rs
crates/freepst-svg/: Cargo.toml
crates/freepst-svg/src/: image.rs  lib.rs  paint.rs  shape.rs  text.rs
crates/freepst-syntax/: Cargo.toml  README.md
crates/freepst-syntax/src/: file.rs  highlight.rs  package.rs  parser.rs  reparser.rs  source.rs
crates/freepst-timing/: Cargo.toml
crates/freepst-timing/src/: lib.rs
crates/freepst-utils/: Cargo.toml
crates/freepst-utils/src/: pico.rs  round.rs
crates/freepst/src/: diag.rs  lib.rs
crates/freepst/src/eval/: import.rs
crates/freepst/src/foundations/: calc.rs  value.rs
crates/freepst/src/introspection/: locate.rs  query.rs  state.rs
crates/freepst/src/layout/: container.rs  repeat.rs
crates/freepst/src/math/: cancel.rs  class.rs  equation.rs  lr.rs  underover.rs
crates/freepst/src/model/: bibliography.rs  mod.rs  quote.rs
crates/freepst/src/text/: mod.rs  raw.rs
crates/freepst/src/visualize/: line.rs  path.rs  shape.rs
crates/freepst/src/visualize/image/: mod.rs
docs/: Cargo.toml
docs/changelog/: 0.10.0.md  0.11.0.md  0.12.0.md  0.7.0.md  0.9.0.md
docs/dev/: architecture.md
docs/reference/: syntax.md
docs/src/: contribs.rs  html.rs  lib.rs  link.rs  main.rs
tests/: Cargo.toml  README.md
tests/fuzz/: Cargo.toml
tests/fuzz/src/: compile.rs  parse.rs
tests/src/: args.rs  collect.rs  custom.rs  run.rs  tests.rs  world.rs
tests/suite/text/: raw.typ  smallcaps.typ
tools/support/: README.md
tools/test-helper/: package.json
tools/test-helper/src/: extension.ts
