[workspace]
members = ["crates/*", "docs", "tests", "tests/fuzz"]
default-members = ["crates/freepst-cli"]
resolver = "2"

[workspace.package]
version = "0.12.0"
rust-version = "1.80" # also change in ci.yml
authors = ["The Freepst & Typst Project Developers"]
edition = "2021"
repository = "https://github.com/danilasar/freepst"
categories = ["compilers"]
keywords = ["typst"]
readme = "README.md"

[workspace.dependencies]
freepst = { path = "crates/freepst", version = "0.12.0" }
freepst-cli = { path = "crates/freepst-cli", version = "0.12.0" }
freepst-eval = { path = "crates/freepst-eval", version = "0.12.0" }
freepst-html = { path = "crates/freepst-html", version = "0.12.0" }
freepst-ide = { path = "crates/freepst-ide", version = "0.12.0" }
freepst-kit = { path = "crates/freepst-kit", version = "0.12.0" }
freepst-layout = { path = "crates/freepst-layout", version = "0.12.0" }
freepst-library = { path = "crates/freepst-library", version = "0.12.0" }
freepst-macros = { path = "crates/freepst-macros", version = "0.12.0" }
freepst-pdf = { path = "crates/freepst-pdf", version = "0.12.0" }
freepst-realize = { path = "crates/freepst-realize", version = "0.12.0" }
freepst-render = { path = "crates/freepst-render", version = "0.12.0" }
freepst-svg = { path = "crates/freepst-svg", version = "0.12.0" }
freepst-timing = { path = "crates/freepst-timing", version = "0.12.0" }
freepst-syntax = { path = "crates/freepst-syntax", version = "0.12.0" }
freepst-utils = { path = "crates/freepst-utils", version = "0.12.0" }
freepst-assets = { package = "typst-assets", git = "https://github.com/typst/typst-assets", rev = "8cccef9" }
freepst-dev-assets = { package = "typst-dev-assets", git = "https://github.com/typst/typst-dev-assets", rev = "b07d156" }
arrayvec = "0.7.4"
az = "1.2"
base64 = "0.22"
bitflags = { version = "2", features = ["serde"] }
bumpalo = { version = "3.15.4", features = ["boxed", "collections"] }
bytemuck = "1"
chinese-number = { version = "0.7.2", default-features = false, features = ["number-to-chinese"] }
chrono = { version = "0.4.24", default-features = false, features = ["clock", "std"] }
ciborium = "0.2.1"
clap = { version = "4.4", features = ["derive", "env", "wrap_help"] }
clap_complete = "4.2.1"
clap_mangen = "0.2.10"
codespan-reporting = "0.11"
codex = { git = "https://github.com/typst/codex", rev = "343a9b1" }
color-print = "0.3.6"
comemo = "0.4"
csv = "1"
ctrlc = "3.4.1"
dirs = "5"
ecow = { version = "0.2", features = ["serde"] }
env_proxy = "0.4"
flate2 = "1"
fontdb = { version = "0.21", default-features = false }
fs_extra = "1.3"
hayagriva = { version = "0.8", git = "https://github.com/danilasar/hayagriva.git", rev = "9594591" }
heck = "0.5"
hypher = "0.1.4"
icu_properties = { version = "1.4", features = ["serde"] }
icu_provider = { version = "1.4", features = ["sync"] }
icu_provider_adapters = "1.4"
icu_provider_blob = "1.4"
icu_segmenter = { version = "1.4", features = ["serde"] }
if_chain = "1"
image = { version = "0.25.2", default-features = false, features = ["png", "jpeg", "gif"] }
indexmap = { version = "2", features = ["serde"] }
kamadak-exif = "0.5"
kurbo = "0.11"
libfuzzer-sys = "0.4"
lipsum = "0.9"
miniz_oxide = "0.8"
native-tls = "0.2"
notify = "6"
once_cell = "1"
open = "5.0.1"
openssl = "0.10"
oxipng = { version = "9.0", default-features = false, features = ["filetime", "parallel", "zopfli"] }
palette = { version = "0.7.3", default-features = false, features = ["approx", "libm"] }
parking_lot = "0.12.1"
pathdiff = "0.2"
pdf-writer = "0.12"
phf = { version = "0.11", features = ["macros"] }
pixglyph = "0.5.1"
png = "0.17"
portable-atomic = "1.6"
proc-macro2 = "1"
pulldown-cmark = "0.9"
qcms = "0.3.0"
quote = "1"
rayon = "1.7.0"
regex = "1"
regex-syntax = "0.8"
resvg = { version = "0.43", default-features = false, features = ["raster-images"] }
roxmltree = "0.20"
rust_decimal = { version = "1.36.0", default-features = false, features = ["maths"] }
rustybuzz = "0.18"
same-file = "1"
self-replace = "1.3.7"
semver = "1"
serde = { version = "1.0.184", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
shell-escape = "0.1.5"
sigpipe = "0.1"
siphasher = "1"
smallvec = { version = "1.11.1", features = ["union", "const_generics", "const_new"] }
stacker = "0.1.15"
subsetter = "0.2"
svg2pdf = "0.12"
syn = { version = "2", features = ["full", "extra-traits"] }
syntect = { version = "5", default-features = false, features = ["parsing", "regex-fancy", "plist-load", "yaml-load"] }
tar = "0.4"
tempfile = "3.7.0"
thin-vec = "0.2.13"
time = { version = "0.3.20", features = ["formatting", "macros", "parsing"] }
tiny_http = "0.12"
tiny-skia = "0.11"
toml = { version = "0.8", default-features = false, features = ["parse", "display"] }
ttf-parser = "0.24.1"
two-face = { version = "0.4.0", default-features = false, features = ["syntect-fancy"] }
typed-arena = "2"
unicode-bidi = "0.3.18"
unicode-ident = "1.0"
unicode-math-class = "0.1"
unicode-script = "0.5"
unicode-segmentation = "1"
unscanny = "0.1"
ureq = { version = "2", default-features = false, features = ["native-tls", "gzip", "json"] }
usvg = { version = "0.43", default-features = false, features = ["text"] }
walkdir = "2"
wasmi = "0.39.0"
xmlparser = "0.13.5"
xmlwriter = "0.1.0"
xmp-writer = "0.3"
xz2 = { version = "0.1", features = ["static"] }
yaml-front-matter = "0.1"
zip = { version = "2", default-features = false, features = ["deflate"] }

[profile.dev.package."*"]
opt-level = 2

[profile.release]
lto = "thin"
codegen-units = 1

[profile.release.package."freepst-cli"]
strip = true

[workspace.lints.clippy]
blocks_in_conditions = "allow"
comparison_chain = "allow"
manual_range_contains = "allow"
mutable_key_type = "allow"
uninlined_format_args = "warn"
wildcard_in_or_patterns = "allow"
