[package]
name = "freepst-docs"
version = { workspace = true }
rust-version = { workspace = true }
authors = { workspace = true }
edition = { workspace = true }
publish = false

[[bin]]
name = "freepst-docs"
required-features = ["cli"]
doc = false

[features]
default = ["cli"]
cli = ["clap", "freepst-render", "serde_json"]

[dependencies]
freepst = { workspace = true }
freepst-render = { workspace = true, optional = true }
typst-assets = { workspace = true, features = ["fonts"] }
typst-dev-assets = { workspace = true }
clap = { workspace = true, optional = true }
ecow = { workspace = true }
heck = { workspace = true }
pulldown-cmark = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true, optional = true }
serde_yaml = { workspace = true }
syntect = { workspace = true, features = ["html"] }
typed-arena = { workspace = true }
typst-render = { workspace = true, optional = true }
unscanny = { workspace = true }
yaml-front-matter = { workspace = true }

[lints]
workspace = true
