[package]
name = "freepst-tests"
version = { workspace = true }
rust-version = { workspace = true }
authors = { workspace = true }
edition = { workspace = true }
publish = false

[[test]]
name = "tests"
path = "src/tests.rs"
harness = false

[features]
# Allow just compiling the parser when only testing freepst-syntax. To do so,
# pass '--no-default-features' to 'cargo test'.
default = [
    # "freepst-syntax" intentionally not present
    "freepst",
    "freepst-assets",
    "freepst-dev-assets",
    "freepst-html",
    "freepst-library",
    "freepst-pdf",
    "freepst-render",
    "freepst-svg",
]

[dependencies]
freepst = { workspace = true, optional = true }
freepst-assets = { workspace = true, features = ["fonts"], optional = true }
freepst-dev-assets = { workspace = true, optional = true }
freepst-pdf = { workspace = true, optional = true }
freepst-render = { workspace = true, optional = true }
freepst-svg = { workspace = true, optional = true }
freepst-syntax = { workspace = true }
# Mark other Typst crates as optional so we can use '--no-default-features'
# to decrease compile times for parser testing.
freepst-html = { workspace = true, optional = true }
freepst-library = { workspace = true, optional = true }
clap = { workspace = true }
comemo = { workspace = true }
ecow = { workspace = true }
oxipng = { workspace = true }
parking_lot = { workspace = true }
rayon = { workspace = true }
regex = { workspace = true }
tiny-skia = { workspace = true }
unscanny = { workspace = true }
walkdir = { workspace = true }

[lints]
workspace = true
