[package]
name = "freepst-cli"
description = "The command line interface for Freepst."
categories = ["compilers", "command-line-utilities"]
keywords = ["typst", "cli"]
version = { workspace = true }
rust-version = { workspace = true }
authors = { workspace = true }
edition = { workspace = true }
repository = { workspace = true }
license = { workspace = true }
readme = { workspace = true }

[[bin]]
name = "freepst"
path = "src/main.rs"
doc = false

[dependencies]
freepst = { workspace = true }
freepst-eval = { workspace = true }
freepst-html = { workspace = true }
freepst-kit = { workspace = true }
freepst-macros = { workspace = true }
freepst-pdf = { workspace = true }
freepst-render = { workspace = true }
freepst-svg = { workspace = true }
freepst-timing = { workspace = true }
chrono = { workspace = true }
clap = { workspace = true }
codespan-reporting = { workspace = true }
color-print = { workspace = true }
comemo = { workspace = true }
dirs = { workspace = true }
ecow = { workspace = true }
fs_extra = { workspace = true }
notify = { workspace = true }
open = { workspace = true }
parking_lot = { workspace = true }
pathdiff = { workspace = true }
rayon = { workspace = true }
same-file = { workspace = true }
self-replace = { workspace = true, optional = true }
semver = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
shell-escape = { workspace = true }
sigpipe = { workspace = true }
tar = { workspace = true }
tempfile = { workspace = true }
tiny_http = { workspace = true, optional = true }
toml = { workspace = true }
ureq = { workspace = true }
xz2 = { workspace = true, optional = true }
zip = { workspace = true, optional = true }

[build-dependencies]
chrono = { workspace = true }
clap = { workspace = true, features = ["string"] }
clap_complete = { workspace = true }
clap_mangen = { workspace = true }
color-print = { workspace = true }
semver = { workspace = true }

[features]
default = ["embed-fonts", "http-server"]

# Embeds some fonts into the binary, see freepst-kit
embed-fonts = ["freepst-kit/embed-fonts"]

# Enables the built-in HTTP server for `typst watch` and HTML export.
http-server = ["dep:tiny_http"]

# Permits the CLI to update itself without a package manager.
self-update = ["dep:self-replace", "dep:xz2", "dep:zip"]

# Whether to vendor OpenSSL. Not applicable to Windows and macOS builds.
vendor-openssl = ["freepst-kit/vendor-openssl"]

[lints]
workspace = true

# The following metadata is used by `cargo-binstall`, and should be synchronized
# with `.github/workflows/release.yml`.
[package.metadata.binstall]
pkg-url = "{ repo }/releases/download/v{ version }/freepst-{ target }{ archive-suffix }"
bin-dir = "freepst-{ target }/typst{ binary-ext }"
pkg-fmt = "txz"

[package.metadata.binstall.overrides]
x86_64-pc-windows-msvc = { pkg-fmt = "zip" }
aarch64-pc-windows-msvc = { pkg-fmt = "zip" }
