[package]
name = "freepst-ide"
description = "IDE functionality for Freepst."
version = { workspace = true }
rust-version = { workspace = true }
edition = { workspace = true }
repository = { workspace = true }
categories = { workspace = true }
keywords = { workspace = true }
readme = { workspace = true }

[dependencies]
freepst = { workspace = true }
freepst-eval = { workspace = true }
comemo = { workspace = true }
ecow = { workspace = true }
if_chain = { workspace = true }
pathdiff = { workspace = true }
serde = { workspace = true }
unscanny = { workspace = true }

[dev-dependencies]
freepst-assets = { workspace = true, features = ["fonts"] }
freepst-dev-assets = { workspace = true }
once_cell = { workspace = true }

[lints]
workspace = true
