[package]
name = "freepst-macros"
description = "Proc-macros for Freepst."
version = { workspace = true }
rust-version = { workspace = true }
authors = { workspace = true }
edition = { workspace = true }
repository = { workspace = true }
categories = { workspace = true }
keywords = { workspace = true }
readme = { workspace = true }

[lib]
proc-macro = true

[dependencies]
heck = { workspace = true }
proc-macro2 = { workspace = true }
quote = { workspace = true }
syn = { workspace = true }

[lints]
workspace = true
