[package]
name = "freepst-realize"
description = "Typst's realization subsystem."
version = { workspace = true }
rust-version = { workspace = true }
authors = { workspace = true }
edition = { workspace = true }
#homepage = { workspace = true }
repository = { workspace = true }
#license = { workspace = true }
categories = { workspace = true }
keywords = { workspace = true }
readme = { workspace = true }

[dependencies]
freepst-library = { workspace = true }
freepst-macros = { workspace = true }
freepst-syntax = { workspace = true }
freepst-timing = { workspace = true }
freepst-utils = { workspace = true }
arrayvec = { workspace = true }
bumpalo = { workspace = true }
comemo = { workspace = true }
ecow = { workspace = true }
regex = { workspace = true }

[lints]
workspace = true
