[package]
name = "freepst-render"
description = "Raster image exporter for Freepst."
version = { workspace = true }
rust-version = { workspace = true }
authors = { workspace = true }
edition = { workspace = true }
repository = { workspace = true }
license = { workspace = true }
categories = { workspace = true }
keywords = { workspace = true }
readme = { workspace = true }

[dependencies]
freepst-library = { workspace = true }
freepst-macros = { workspace = true }
freepst-timing = { workspace = true }
bytemuck = { workspace = true }
comemo = { workspace = true }
image = { workspace = true }
pixglyph = { workspace = true }
resvg = { workspace = true }
tiny-skia = { workspace = true }
ttf-parser = { workspace = true }

[lints]
workspace = true
