[package]
name = "freepst-svg"
description = "SVG exporter for Freepst."
version = { workspace = true }
rust-version = { workspace = true }
authors = { workspace = true }
edition = { workspace = true }
repository = { workspace = true }
categories = { workspace = true }
keywords = { workspace = true }
readme = { workspace = true }

[dependencies]
freepst-library = { workspace = true }
freepst-macros = { workspace = true }
freepst-timing = { workspace = true }
freepst-utils = { workspace = true }
base64 = { workspace = true }
comemo = { workspace = true }
ecow = { workspace = true }
flate2 = { workspace = true }
ttf-parser = { workspace = true }
xmlparser = { workspace = true }
xmlwriter = { workspace = true }

[lints]
workspace = true
