[package]
name = "freepst-timing"
description = "Performance timing for Freepst."
version = { workspace = true }
rust-version = { workspace = true }
authors = { workspace = true }
edition = { workspace = true }
repository = { workspace = true }
categories = { workspace = true }
keywords = { workspace = true }
readme = { workspace = true }

[dependencies]
parking_lot = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }

[lints]
workspace = true
