[package]
name = "freepst"
description = "A new markup-based typesetting system that is powerful and easy to learn."
categories = ["compilers", "science"]
keywords = ["markup", "typesetting", "typst"]
version = { workspace = true }
rust-version = { workspace = true }
authors = { workspace = true }
edition = { workspace = true }
repository = { workspace = true }
readme = { workspace = true }

[dependencies]
typst-eval = { workspace = true }
typst-html = { workspace = true }
typst-layout = { workspace = true }
typst-library = { workspace = true }
freepst-macros = { workspace = true }
typst-realize = { workspace = true }
freepst-syntax = { workspace = true }
freepst-timing = { workspace = true }
freepst-utils = { workspace = true }
comemo = { workspace = true }
ecow = { workspace = true }

[lints]
workspace = true
