[package]
name = "freepst"
description = "A new markup-based typesetting system that is powerful and easy to learn."
categories = ["compilers", "science"]
keywords = ["markup", "typesetting", "typst"]
version = { workspace = true }
rust-version = { workspace = true }
authors = { workspace = true }
edition = { workspace = true }
repository = { workspace = true }
readme = { workspace = true }

[dependencies]
freepst-eval = { workspace = true }
freepst-html = { workspace = true }
freepst-layout = { workspace = true }
freepst-library = { workspace = true }
freepst-macros = { workspace = true }
freepst-realize = { workspace = true }
freepst-syntax = { workspace = true }
freepst-timing = { workspace = true }
freepst-utils = { workspace = true }
comemo = { workspace = true }
ecow = { workspace = true }

[lints]
workspace = true
